--- a/prize/index.html
+++ b/prize/index.html
@@ -17,7 +17,7 @@
     canvas.width=360;
     canvas.height=360;
     document.body.appendChild(canvas);
-    canvas.style.backgroundImage = 'url(01big.jpg)';
+    canvas.style.backgroundImage = 'url(http://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=%E5%9B%BE%E7%89%87&hs=0&pn=5&spn=0&di=46067147280&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&ie=utf-8&oe=utf-8&cl=2&lm=-1&cs=3144465310%2C4114570573&os=503249983%2C4182093694&simid=4193121428%2C727776595&adpicid=0&lpn=0&ln=30&fr=ala&fm=&sme=&cg=&bdtype=0&oriquery=&objurl=http%3A%2F%2Fimg3.redocn.com%2Ftupian%2F20150430%2Fmantenghuawenmodianshiliangbeijing_3924704.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Ff7vwt_z%26e3B6j15vg_z%26e3Bv54AzdH3Ffitstwg2p7AzdH3Fnld90a9_z%26e3Bip4s&gsm=0)';
     cas.fillStyle = 'rgb(211,211,211)';
     cas.fillRect(0, 0, 360, 360);
     cas.globalCompositeOperation = 'destination-out';
