--- a/prize/index.html
+++ b/prize/index.html
@@ -17,7 +17,7 @@
     canvas.width=360;
     canvas.height=360;
     document.body.appendChild(canvas);
-    canvas.style.backgroundImage = 'url(https://github.com/cyf0611/cyf0611.github.io/blob/master/suprise/images/1.jpg)';
+    canvas.style.backgroundImage = 'url(1.jpg)';
     cas.fillStyle = 'rgb(211,211,211)';
     cas.fillRect(0, 0, 360, 360);
     cas.globalCompositeOperation = 'destination-out';
